# dusklight

./: CMakeLists.txt  files.cmake
src/dusk/randomizer/: CMakeLists.txt  randomizer.cmake  randomizer.cpp  randomizer.hpp
src/dusk/randomizer/data/: entrance_shuffle_data.yaml  items.yaml  locations.yaml  macros.yaml  settings_list.yaml
src/dusk/randomizer/data/tests/logic/all random/: settings.yaml
src/dusk/randomizer/data/tests/logic/hyrule castle all dungeons/: settings.yaml
src/dusk/randomizer/data/tests/logic/hyrule castle fused shadows/: settings.yaml
src/dusk/randomizer/data/tests/logic/hyrule castle mirror shards/: settings.yaml
src/dusk/randomizer/data/tests/logic/hyrule castle open/: settings.yaml
src/dusk/randomizer/data/tests/logic/unrequired dungeons are barren/: settings.yaml
src/dusk/randomizer/data/world/dungeons/: Goron Mines.yaml  Hyrule Castle.yaml  Palace of Twilight.yaml
src/dusk/randomizer/data/world/overworld/: Eldin Province.yaml  Faron Province.yaml  Lanayru Province.yaml  Ordona Province.yaml  Snowpeak Province.yaml
src/dusk/randomizer/game/: messages.cpp  randomizer_context.cpp  randomizer_context.hpp  tools.cpp  tools.h  verify_item_functions.cpp  verify_item_functions.h
src/dusk/randomizer/generator/data/: entrance_shuffle_data.yaml  items.yaml  locations.yaml
src/dusk/randomizer/generator/data/text/: text_overrides.yaml
src/dusk/randomizer/generator/data/text/languages/: english.yaml  (+4 more)
src/dusk/randomizer/generator/logic/: hints.cpp
src/dusk/randomizer/generator/utility/: text.cpp
src/dusk/randomizer/logic/: area.cpp  area.hpp  dungeon.cpp  dungeon.hpp  entrance.cpp  entrance.hpp  entrance_shuffle.cpp  entrance_shuffle.hpp  fill.cpp  fill.hpp  generate.cpp  generate.hpp  item.cpp  item.hpp  item_pool.cpp  item_pool.hpp  location.cpp  location.hpp  plandomizer.cpp  plandomizer.hpp  requirement.cpp  requirement.hpp  search.cpp  search.hpp  spoiler_log.cpp  spoiler_log.hpp  world.cpp  world.hpp
src/dusk/randomizer/logic/flatten/: bits.cpp  bits.hpp  flatten.cpp  flatten.hpp  simplify_algebraic.cpp  simplify_algebraic.hpp
src/dusk/randomizer/seedgen/: config.cpp  config.hpp  seed.cpp  seed.hpp  settings.cpp  settings.hpp
src/dusk/randomizer/test/: test.cpp  test.hpp
src/dusk/randomizer/utility/: color.cpp  container.hpp  endian.cpp  file.cpp  file.hpp  general.hpp  log.cpp  log.hpp  path.cpp  platform.cpp  platform.hpp  random.cpp  random.hpp  string.cpp  string.hpp  text.cpp  time.cpp  time.hpp  yaml.hpp
(+66 files in other folders)
